Updated Applicants portal

--- a/src/app/modules/applicant-module/applicants/applicants.component.html
+++ b/src/app/modules/applicant-module/applicants/applicants.component.html
@@ -5,7 +5,7 @@
       <p>Fill in your details to make your application process faster.</p>
     </div>
     <div>
-      <button nbButton routerLink="../applicant-profile" status="basic" size="medium" outline style="align-items: flex-start; color: #4847E0; background: rgba(72, 71, 224, 0.08);">Continue</button>
+      <button nbButton (click)="gotoProfile()" status="basic" size="medium" outline style="align-items: flex-start; color: #4847E0; background: rgba(72, 71, 224, 0.08);">Continue</button>
     </div>
     <!-- <button nbButton status="basic" style="align-items: flex-start">Next</button>
     <button class="btn" style="color: #4847E0; background: rgba(72, 71, 224, 0.08); border-radius: 4px;">Continue</button> -->
