--- a/src/app/modules/recruitment/admin-dashboard/newjob/newjob.component.html
+++ b/src/app/modules/recruitment/admin-dashboard/newjob/newjob.component.html
@@ -118,9 +118,7 @@
             <div class="col-sm-6 col-md-6 col-lg-6">
               <select class="custom-select" name="currency" #currency="ngModel" [(ngModel)]="newJobModel.currency" required>
                 <option value="">Select </option>
-                <option value="1">USD</option>
-                <option value="2">NG</option>
-                <option value="3">AUD</option>
+                <option *ngFor="let currency of allCurrencies" [value]="currency.code">{{ currency.name }}</option>
               </select>
             </div>
           </div>
