Updated EmailOTP verification

--- a/src/app/modules/applicant-module/applicant-module.component.html
+++ b/src/app/modules/applicant-module/applicant-module.component.html
@@ -1,4 +1,4 @@
-<!-- <ngx-customizable-column-layout  [sideMenuToggle]="sideMenuToggle">
+<ngx-customizable-column-layout  [sideMenuToggle]="sideMenuToggle">
   <div Customizedmenu>
     <div class="row" style="display: flex; justify-content: flex-start; flex-direction: row; padding: 10px;">
       <div style="background-color: rgba(72, 71, 224, 0.04); padding: 10px;">
@@ -46,7 +46,7 @@
     </div>
   </div>
   <router-outlet></router-outlet>
-</ngx-customizable-column-layout> -->
-<ngx-single-column-header-layout>
+</ngx-customizable-column-layout>
+<!-- <ngx-single-column-header-layout>
 <router-outlet></router-outlet>
-</ngx-single-column-header-layout>
+</ngx-single-column-header-layout> -->
