--- a/src/app/components/file-upload/file-upload.component.html
+++ b/src/app/components/file-upload/file-upload.component.html
@@ -8,13 +8,15 @@
     (dragover)="onDragOver($event)"
     style="width: 100%;"
   >
-  <label class="file-label filebutton" style="width: 100%;">
+  <div class="file-label filebutton" style="width: 100%;"  >
     <!-- <input class="file-input" type="file" class="inputfile" name="resume" /> -->
-    <span class="file-cta" (change)="filereceived(flowBasic)"
+    <span class="file-cta" 
+  
     *ngIf='files.length == 0'
-      type="file"
-      flowButton
-      [flow]="flowBasic.flowJs"
+    flowButton
+    (change)="filereceived(flowBasic)"
+    [flow]="flowBasic.flowJs"
+    
       type="button"
       style="width: auto"
       class="btn waves-effect m-b-5 buttonbackground dashboardbtn">
@@ -24,7 +26,7 @@
       <span *ngIf="inputText" class="file-label">{{inputText}}</span>
       <span *ngIf="!inputText" class="file-label"> Browse file or drag and drop here </span>
     </span>
-  </label>
+  </div>
 </div>
 
 <div *ngFor="let transfer of files; let i = index" style="color: blue; display: flex;">
