--- a/src/app/modules/employeemodule/exitwarning/exitwarning.component.html
+++ b/src/app/modules/employeemodule/exitwarning/exitwarning.component.html
@@ -5,16 +5,29 @@
             <div style="margin-top: 2rem;margin-bottom: 1.5rem;">
                 <p style="font-weight: bolder; font-size: large; ">Warning !</p>
             </div>
-            <div style="margin-top: 1rem;text-align: center;">
-                <p>
-                    You are about to begin a process that will terminate your employment with this organization.
-    
-                </p>
-                <p>click on proceed if you have discussed with your supervisor and intend to continue with the process</p>
-                <p>Also be informed that you will be expected to complete your 30days notice period after termination.</p>
-    
+            <div *ngIf="!loading">
+                <div style="margin-top: 1rem;text-align: center;" *ngIf="allExitRequest.length < 1">
+                    <p>
+                        You are about to begin a process that will terminate your employment with this organization.
+        
+                    </p>
+                    <p>click on proceed if you have discussed with your supervisor and intend to continue with the process</p>
+                    <p>Also be informed that you will be expected to complete your 30days notice period after termination.</p>
+        
+                </div>
+                <div style="margin-top: 1rem;text-align: center;" *ngIf="allExitRequest.length > 0">
+                    <p>
+                        Employment Termination process has began for you
+        
+                    </p>
+                    <p>click on proceed to view/update the process details</p>
+                    <p>Also be informed that you will be expected to complete your 30days notice period after termination.</p>
+        
+                </div>
             </div>
-           
+           <div *ngIf="loading" style="display: flex;align-items: center;justify-content: center;">
+<i class="fa fa-spin fa-spinner fa-2x"></i>
+           </div>
             <div class="d-flex" style="margin-top: 0.5rem;padding: 3rem;">
                 <button nbButton status="primary" class="d-flex column" (click)="onClick()">Proceed</button>
                 <button nbButton outline status="primary" class="d-flex column"
