--- a/src/app/modules/employeemodule/managementexist/managementexist.component.html
+++ b/src/app/modules/employeemodule/managementexist/managementexist.component.html
@@ -70,6 +70,7 @@
             </ngx-date>
           </div>
         </div>
+        
         <div class="form-group row">
           <label for="inputEmail1" class="label col-sm-4 col-form-label listsubheader">Exit Choice</label>
           <div class="col-sm-8">
@@ -80,42 +81,8 @@
             </nb-radio-group>
           </div>
         </div>
-        <!-- <hr>jj-{{selectedOption}}=uuuu -->
-        <div class="form-group row" style="margin-top: 15px;">
-          <label for="inputEmail1" class="label col-sm-4 col-form-label listsubheader">Select Affected Employee</label>
-          <div class="col-sm-8">
-            <!-- <nb-radio-group  name="selectedOption" [(ngModel)]="uploadOption" class="d-flex">
-              <nb-radio [value]="1">Bulk Upload</nb-radio>
-              <nb-radio [value]="2">Individual Upload</nb-radio>
-
-            </nb-radio-group> -->
-            <ngx-employee-master-search (masterSubmitted)="getSelectedEmployee($event)"
-              [allowmultipleselection]="allowmultipleselection" [selectionHeader]="selectionHeader"
-              [addbtnText]="addbtnText"></ngx-employee-master-search>
-          </div>
-        </div>
-        <!-- <div class="form-group row">
-          <div class="col-md-4" style="display: flex;align-items:center">
-            <label for="" *ngIf="uploadOption == 1">Upload Employee CSV File</label>
-            <label for="" *ngIf="uploadOption == 2">Employee Master</label>
-          </div>
-          <div class="col-md-8 col-xxl-8 ">
-            <div style="display: flex;flex-direction: row;" *ngIf="uploadOption == 1">
-              <div>
-                <ngx-file-upload   class="form-control" >
-                </ngx-file-upload>
-              </div>
-              <div style="padding-left: 10px;display: flex;align-items: center;flex: auto;">
-                <img (click)="downloadSampleFile()" style="height: 20px; margin-right: 10px;cursor: pointer;" src="assets/icons/download.jpg" alt=""><span
-                  style="color: blue;">Download Sample file</span>
-              </div>
-             
-            </div>
-          
-            <ngx-employee-master-search *ngIf="uploadOption == 2" (masterSubmitted)="getSelectedEmployee($event)" [allowmultipleselection]="allowmultipleselection" [selectionHeader]="selectionHeader" [addbtnText]="addbtnText"></ngx-employee-master-search>
      
-          </div>
-        </div> -->
+
         <div style="border-bottom: 0.800000011920929px solid #CED4DA;padding-bottom: 5px;"></div>
         <div style="padding:5px"></div>
         <div class="form-group row">
@@ -125,7 +92,7 @@
           <div class="col-md-8 col-xxl-8 ">
             <div style="display: flex;flex-direction: row;">
               <div>
-                <ngx-file-upload (valueChange)="selectedFile($event,'Supporting Document')" class="form-control">
+                <ngx-file-upload [clearFlag]="master_search_clear_flag"  (valueChange)="selectedFile($event,'Supporting Document')" class="form-control">
                 </ngx-file-upload>
               </div>
               <div style="padding-left: 10px;display: flex;align-items: center;flex: auto;">
@@ -149,7 +116,20 @@
           </div>
 
         </div>
+   <!-- <hr>jj-{{selectedOption}}=uuuu -->
+   <div class="form-group row" style="margin-top: 15px;">
+    <label for="inputEmail1" class="label col-sm-4 col-form-label listsubheader">Select Affected Employee</label>
+    <div class="col-sm-8">
+      <!-- <nb-radio-group  name="selectedOption" [(ngModel)]="uploadOption" class="d-flex">
+        <nb-radio [value]="1">Bulk Upload</nb-radio>
+        <nb-radio [value]="2">Individual Upload</nb-radio>
 
+      </nb-radio-group> -->
+      <ngx-employee-master-search [clearFlag]="master_search_clear_flag" (masterSubmitted)="getSelectedEmployee($event)"
+        [allowmultipleselection]="allowmultipleselection" [selectionHeader]="selectionHeader"
+        [addbtnText]="addbtnText"></ngx-employee-master-search>
+    </div>
+  </div>
         <div class="row">
 
           <div class="offset-sm-4 col-sm-8" style=" display: flex; margin-top: 3rem;margin-bottom: 2rem;">
@@ -167,3 +147,26 @@
 
   </nb-card-body>
 </nb-card>
+
+        <!-- <div class="form-group row">
+          <div class="col-md-4" style="display: flex;align-items:center">
+            <label for="" *ngIf="uploadOption == 1">Upload Employee CSV File</label>
+            <label for="" *ngIf="uploadOption == 2">Employee Master</label>
+          </div>
+          <div class="col-md-8 col-xxl-8 ">
+            <div style="display: flex;flex-direction: row;" *ngIf="uploadOption == 1">
+              <div>
+                <ngx-file-upload   class="form-control" >
+                </ngx-file-upload>
+              </div>
+              <div style="padding-left: 10px;display: flex;align-items: center;flex: auto;">
+                <img (click)="downloadSampleFile()" style="height: 20px; margin-right: 10px;cursor: pointer;" src="assets/icons/download.jpg" alt=""><span
+                  style="color: blue;">Download Sample file</span>
+              </div>
+             
+            </div>
+          
+            <ngx-employee-master-search *ngIf="uploadOption == 2" (masterSubmitted)="getSelectedEmployee($event)" [allowmultipleselection]="allowmultipleselection" [selectionHeader]="selectionHeader" [addbtnText]="addbtnText"></ngx-employee-master-search>
+     
+          </div>
+        </div> -->
